Attempt to fix tiles on Safari

--- a/src/main/css/index.css
+++ b/src/main/css/index.css
@@ -18,6 +18,7 @@ html, body, #main {
     image-rendering: -moz-crisp-edges;
     image-rendering: -o-crisp-edges;
 
+    image-rendering: crisp-edges;
     image-rendering: pixelated;
 
     -ms-interpolation-mode: nearest-neighbor;
